--- a/Exploratory-Analysis-Using-SQL.ipynb
+++ b/Exploratory-Analysis-Using-SQL.ipynb
@@ -128,7 +128,7 @@
                     "output_type": "execute_result"
                 }
             ],
-            "source": "%sql select LAUNCH_SITE from SPACEXTBL where (LAUNCH_SITE) like 'CCA' LIMIT 5"
+            "source": "%sql select * from SPACEXTBL where (LAUNCH_SITE) like 'CCA' LIMIT 5"
         },
         {
             "cell_type": "markdown",
@@ -309,7 +309,8 @@
                 },
                 {
                     "data": {
-                        "text/html": "<table>\n    <tr>\n        <th>1</th>\n        <th>mission_outcome</th>\n        <th>booster_version</th>\n        <th>launch_site</th>\n    </tr>\n    <tr>\n        <td>10</td>\n        <td>Success</td>\n        <td>F9 v1.1 B1012</td>\n        <td>CCAFS LC-40</td>\n    </tr>\n    <tr>\n        <td>11</td>\n        <td>Success</td>\n        <td>F9 v1.1 B1013</td>\n        <td>CCAFS LC-40</td>\n    </tr>\n    <tr>\n        <td>2</td>\n        <td>Success</td>\n        <td>F9 v1.1 B1014</td>\n        <td>CCAFS LC-40</td>\n    </tr>\n</table>",
+                        "text/html": "<table>\n    <tr>\n        <th>1</th>\n        <th>mission_outcome</th>\n        <th>booster_version</th>\n        <th>launch_site</th>\n    </tr>\n    <tr>\n        <td>10</td>\n        <td>Success</td>\n        <td>F9 v1.1 B1012</td>\n        <td>
+                        FS LC-40</td>\n    </tr>\n    <tr>\n        <td>11</td>\n        <td>Success</td>\n        <td>F9 v1.1 B1013</td>\n        <td>CCAFS LC-40</td>\n    </tr>\n    <tr>\n        <td>2</td>\n        <td>Success</td>\n        <td>F9 v1.1 B1014</td>\n        <td>CCAFS LC-40</td>\n    </tr>\n</table>",
                         "text/plain": "[(10, 'Success', 'F9 v1.1 B1012', 'CCAFS LC-40'),\n (11, 'Success', 'F9 v1.1 B1013', 'CCAFS LC-40'),\n (2, 'Success', 'F9 v1.1 B1014', 'CCAFS LC-40')]"
                     },
                     "execution_count": 25,
